[gd_scene load_steps=9 format=3 uid="uid://c1j1jt6wqcgcd"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_hrl31"]
[ext_resource type="Texture2D" uid="uid://cr643o3oudd2s" path="res://assets/tilemap_ground.png" id="1_olcoa"]
[ext_resource type="PackedScene" uid="uid://8sbreenasm0r" path="res://scenes/hook_upgradeorb.tscn" id="3_essuf"]
[ext_resource type="PackedScene" uid="uid://dy63ifw0f3c2i" path="res://scenes/goomba.tscn" id="4_yfoy0"]
[ext_resource type="PackedScene" uid="uid://bnqfpirvyl5al" path="res://scenes/buzzer.tscn" id="5_tnqct"]
[ext_resource type="PackedScene" uid="uid://b4mc5qq40d3tn" path="res://scenes/player1.tscn" id="6_ft14c"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uymiv"]
texture = ExtResource("1_olcoa")
texture_region_size = Vector2i(50, 50)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-25, -25, 25, -25, 25, 25, -25, 25)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(25, -25, 25, 25, -25, 25)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(25, -16.4577, 25, 25, -25, 25, -25, -25, 16.6546, -25)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-25, -25, 25, -25, 25, 25, -25, 25)

[sub_resource type="TileSet" id="TileSet_e37no"]
tile_size = Vector2i(50, 50)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_uymiv")

[node name="level" type="Node2D"]
script = ExtResource("1_hrl31")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_e37no")
format = 2
layer_0/tile_data = PackedInt32Array(786431, 65537, 1, 720895, 65537, 1, 655359, 65537, 1, 589823, 65537, 1, 524287, 65537, 1, 458751, 65537, 1, 393215, 65537, 1, 327679, 65537, 1, 262143, 65537, 1, 196607, 65537, 1, 131071, 65537, 1, 65535, 65537, 1, -1, 65537, 1, -65536, 65537, 1, -65535, 65537, 1, -65534, 65537, 1, -65533, 65537, 1, -65532, 65537, 1, -65531, 65537, 1, -65530, 65537, 1, -65529, 65537, 1, -65528, 65537, 1, -65527, 65537, 1, -65526, 65537, 1, -65525, 65537, 1, -65524, 65537, 1, -65523, 65537, 1, -65522, 65537, 1, -65521, 65537, 1, -65520, 65537, 1, -65519, 65537, 1, -65518, 65537, 1, -65517, 65537, 1, -65516, 65537, 1, -65515, 65537, 1, -65514, 65537, 1, -65513, 65537, 1, 786454, 1, 0, 786453, 1, 0, 786452, 1, 0, 786451, 1, 0, 786450, 1, 268435457, 786447, 1, 1, 786446, 1, 0, 786445, 1, 0, 786444, 1, 0, 786443, 1, 0, 786442, 1, 0, 786441, 1, 0, 786440, 1, 0, 786439, 1, 0, 786438, 1, 0, 786437, 1, 0, 786436, 1, 0, 786435, 1, 0, 786434, 1, 0, 786433, 1, 0, 786432, 1, 0, 851967, 65537, 1, 720896, 65537, 1, 655360, 65537, 1, 589824, 65537, 1, 524288, 65537, 1, 0, 65537, 1, 65536, 65537, 1, 131072, 65537, 1, 196608, 65537, 1, 262144, 65537, 1, 327680, 65537, 1, 393216, 65537, 1, 458752, 65537, 1, 524291, 65537, 1, 458755, 65537, 1, 393219, 65537, 1, 327683, 65537, 1, 262147, 1, 268435457, 262148, 1, 0, 262149, 1, 0, 262150, 1, 1, 327686, 65537, 1, 393222, 65537, 1, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 851983, 65537, 1, 917519, 65537, 1, 983055, 65537, 1, 1048591, 65537, 1, 1048592, 65537, 1, 1048593, 65537, 1, 983058, 65537, 1, 917522, 65537, 1, 851986, 65537, 1, 1048594, 65537, 1, 589842, 1, 0, 589841, 1, 0, 458762, 1, 1, 458761, 1, 0, 458760, 1, 0, 458759, 1, 0, 458758, 65537, 1, 720903, 65537, 0, 720904, 65537, 1, 720905, 65537, 1, 720906, 65537, 268435456, 655369, 65537, 268435456, 655368, 65537, 0, 589843, 1, 0, 589844, 65537, 1, 589839, 1, 268435457, 589840, 1, 0, 524308, 1, 0, 786455, 65537, 1, 720919, 65537, 1, 655383, 65537, 1, 786456, 65537, 1, 786457, 65537, 1, 786458, 65537, 1, 786459, 65537, 1, 786460, 65537, 1, 786461, 65537, 1, 786462, 65537, 1, 786463, 65537, 1, 786464, 65537, 1, 786465, 65537, 1, 786466, 65537, 1, 786467, 65537, 1, 786468, 65537, 1, 524313, 65537, 1, 524314, 65537, 1, 393244, 65537, 1, 393245, 65537, 1, 262170, 65537, 1, 262169, 65537, 1, -65512, 65537, 1, -65511, 65537, 1, -65510, 65537, 1, 720926, 65537, 0, 720927, 65537, 1, 655391, 65537, 0, 589856, 65537, 0, 524321, 65537, 0, 524322, 65537, 1, 458786, 65537, 0, 393251, 65537, 0, 655393, 65537, 1, 655392, 65537, 1, 720928, 65537, 1, 720929, 65537, 1, 589857, 65537, 1, 589858, 65537, 1, 524323, 65537, 1, 458787, 65537, 1, 458788, 65537, 1, 524324, 65537, 1, 589859, 65537, 1, 655395, 65537, 1, 655394, 65537, 1, 720930, 65537, 1, 720931, 65537, 1, 720932, 65537, 1, 655396, 65537, 1, 589860, 65537, 1, 393252, 1, 1, -65509, 65537, 1, -65508, 65537, 1, -65507, 65537, 1, -65506, 65537, 1, -65505, 65537, 1, -65504, 65537, 1, -65503, 65537, 1, -65502, 65537, 1, -65501, 65537, 1, -65500, 65537, 1, 36, 65537, 1, 65572, 65537, 1, 131108, 65537, 1, 196644, 65537, 1, 196645, 65537, 1, 262181, 65537, 1, 327717, 65537, 1, 393253, 65537, 1)

[node name="projectiles" type="Node2D" parent="."]

[node name="goomba" parent="." instance=ExtResource("4_yfoy0")]
position = Vector2(1014.2, 374.349)

[node name="buzzer" parent="." instance=ExtResource("5_tnqct")]
position = Vector2(222.958, 68.864)

[node name="hook_upgradeorb" parent="." instance=ExtResource("3_essuf")]
position = Vector2(253.523, 167.296)

[node name="player" parent="." instance=ExtResource("6_ft14c")]
position = Vector2(484.823, 314.165)

[connection signal="body_entered" from="hook_upgradeorb" to="." method="_on_upgrade_hook_body_entered"]
[connection signal="p1_grenade_activated" from="player" to="." method="_on_player_p_1_grenade_activated"]
[connection signal="p1_shoot_activated" from="player" to="." method="_on_player_p_1_shoot_activated"]
[connection signal="sig_buttonpress" from="player" to="." method="_on_player_sig_buttonpress"]
